[workspace]
resolver = "3"  
    # cargo는 하위호환에 진심이기 때문에, 워크스페이스같이 여러 cargo 프로젝트를 묶어두는 공간의 경우 최대한 보수적으로 버전을 잡는다. 그래서 기본값이 1이 되었다.
    # 리졸버 = 크레이트 정리 알고리즘이며 현재는 3이 최신버전이고, 하위 프로젝트도 3을 사용하나 워크스페이스가 1을 사용했기 때문에 워닝이 발생한 것.

members = [
    "projects/hello_cargo",
    "projects/guessing_game"
        # 프로젝트를 만들 때마다 추가해줘야함
]